--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -17,9 +17,6 @@
     height: 100%;
 }
 #tour .signIn {
-    background: #333;
-    color: #eee;
-    text-shadow: 0 1px 0 #000;
     width: 30%;
     height: 100%;
 }
@@ -501,4 +498,14 @@ padding: 10px 20px;
 }
 #productDetailsPopup .bottom {
     background: #e9e9e9;
+}
+
+/* selected products/goals */
+.selectedProducts .timeToEarn {
+    color: #777;
+    font-size: .9em;
+}
+.selectedProducts .time {
+    color: #f93d22;
+    font-size: 1.2em;
 }
