--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -214,7 +214,6 @@
 }
 
 #startTasks .taskCatalog .tasks,
-#startTasks .taskCatalog .popularTasks,
 #startTasks .productCatalog .products,
 #startTasks .productCatalog .popularProducts{
     height: 483px;
@@ -505,8 +504,36 @@ padding: 10px 20px;
 .selectedProducts .timeToEarn {
     color: #777;
     font-size: .9em;
+    text-align: right;
 }
 .selectedProducts .time {
     color: #f93d22;
-    font-size: 1.2em;
+    font-size: 1.3em;
+}
+.selectedProducts .completionBar {
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    box-shadow: 0 0 2px 0 rgba(0,0,0,.85);
+    width: 100%;
+    height: 38px;
+    margin-bottom: 7px;
+    background: #b0b0ae; /* Old browsers */
+    background: -moz-linear-gradient(top, #b0b0ae 0%, #e7e7e5 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0b0ae), color-stop(100%,#e7e7e5)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #b0b0ae 0%,#e7e7e5 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #b0b0ae 0%,#e7e7e5 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #b0b0ae 0%,#e7e7e5 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #b0b0ae 0%,#e7e7e5 100%); /* W3C */
+}
+.selectedProducts .completionBar .bar {
+}
+.selectedProducts .completionBar .percent {
+    color: #fff;
+    text-shadow: 0 1px 0 #333;
+    font-size: .8em;
+    line-height: 38px;
+    margin-left: 10px;
+}
+.selectedProducts .completionBar .percent span {
+    font-size: 2em;
 }
