Fix scrolling of popular tasks

--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -214,6 +214,7 @@
 }
 
 #startTasks .taskCatalog .tasks,
+#startTasks .taskCatalog .popularTasks,
 #startTasks .productCatalog .products,
 #startTasks .productCatalog .popularProducts{
     height: 483px;
