--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -506,6 +506,7 @@ padding: 10px 20px;
     color: #777;
     font-size: .9em;
     text-align: right;
+    line-height: 1.9em;
 }
 .selectedProducts .time {
     color: #f93d22;
