--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -401,6 +401,23 @@ padding: 10px 30px;
 #configureTasks .taskContent.ui-content {
     min-width: 416px;
 }
+.closePopupButton,
+.closePopupButton.ui-link:visited {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-weight: bold;
+    font-size: 1.6em;
+    border-radius: 50%;
+    background: #ccc;
+    color: #fff !important;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #333;
+    top: -15px !important;
+    right: -15px !important;
+    box-shadow: 0 0px 4px rgba(0,0,0,.75);
+}
 #configureTasks .taskTitle,
 #customGoalPopup .title {
     border-top-left-radius: inherit;
@@ -421,7 +438,8 @@ padding: 10px 30px;
 }
 #configureTasks .money label,
 #customGoalForm .money label,
-#customGoalForm #newGoalName {
+#customGoalForm #newGoalName,
+#customGoalForm .goalPhoto label {
     width: 100%;
 }
 #customGoalPopup-popup .customGoalContent {
