--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,9 @@ textarea {
     display: table-cell;
     vertical-align: middle;
 }
+.center {
+    text-align: center;
+}
 .error {
     margin-top: 5px;
     color: #f33;
