--- a/css/iosSlider.css
+++ b/css/iosSlider.css
@@ -47,6 +47,9 @@
 }
 #tour h1 {
    text-align: center;
+   text-shadow: 0 1px 1px #333;
+   color: white;
+   margin: 50px 100px;
 }
 #tour .continueMessage {
     position: absolute;
