--- a/css/onboardingFlow.css
+++ b/css/onboardingFlow.css
@@ -41,6 +41,8 @@
     height: 100%;
     position: relative;
     z-index: 20;
+    color: #fff;
+    text-shadow: 0 1px 1px #333;
     background: #3799b6; /* Old browsers */
     background: url(../img/texture@2x.png), -moz-linear-gradient(top, #3799b6 0%, #66caea 21%, #67caea 71%, #2f8da9 100%); /* FF3.6+ */
     background: url(../img/texture@2x.png), -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3799b6), color-stop(21%,#66caea), color-stop(71%,#67caea), color-stop(100%,#2f8da9)); /* Chrome,Safari4+ */
@@ -60,6 +62,19 @@
     background: transparent url(../img/logo@2x.png) no-repeat;
     background-size: 100%;
     margin-left: 13px;
+}
+#tour .signIn .tagline {
+    color: #1284a6;
+    font-size: 1.1em;
+    text-align: center;
+    text-shadow: 0 1px 1px #9cedff;
+    margin: 5px 0 40px;
+    font-weight: bold;
+}
+#tour .signIn .intro {
+    font-size: 1.2em;
+    line-height: 1.2em;
+    margin-bottom: .5em;
 }
 #tour .signIn .error {
     margin-bottom: 15px;
