--- a/css/iosSlider.css
+++ b/css/iosSlider.css
@@ -138,5 +138,62 @@
 }
 
 .iosSlider .slide3 {
+   position: relative;
+}
+.iosSlider .slide3 .testimonial {
+   position: absolute;
+}
+.iosSlider .slide3 .t1 {
+   top: 170px;
+   left: 30px;
+   width: 270px;
+}
+.iosSlider .slide3 .t2 {
+   top: 250px;
+   right: 30px;
+   width: 300px;
+}
+.iosSlider .slide3 .t3 {
+   top: 430px;
+   left: 95px;
+   width: 285px;
+}
+.iosSlider .slide3 .bubble .pointer {
+   position: absolute;
+   bottom: -45px;
+   width: 0px;
+   height: 0px;
+   border-style: solid;
+   border-width: 50px 30px 0 0;
+   border-color: #ffffff transparent transparent transparent;
+   -webkit-transform: rotate(12deg);
+}
+.iosSlider .slide3 .t1 .bubble .pointer { right: 63px; }
+.iosSlider .slide3 .t2 .bubble .pointer { right: 60px; }
+.iosSlider .slide3 .t3 .bubble .pointer {
+   left: 83px;
+   border-width: 0 30px 50px 0;
+   border-color: transparent #ffffff transparent transparent;
+   -webkit-transform: rotate(-12deg);
 }
 
+.iosSlider .slide3 .bubble {
+   text-align: center;
+   background: #fff;
+   border-radius: 40px;
+   padding: 20px;
+   box-shadow: 0 2px 2px 1px rgba(0,0,0,.25);
+}
+.slide3 .name {
+   position: absolute;
+   bottom: -48px;
+   font-weight: bold;
+   color: #1081a3;
+   left: 30%;
+}
+.slide3 .t2 .name {
+   left: 40%;
+}
+.slide3 .t3 .name {
+   left: 45%;
+}
