--- a/css/iosSlider.css
+++ b/css/iosSlider.css
@@ -6,6 +6,14 @@
    left: 0;
    right: 0;
    height: 100%;
+   
+   background: #20aed6; /* Old browsers */
+   background: -moz-linear-gradient(top, #20aed6 0%, #afe3f8 44%, #e1f5fe 100%); /* FF3.6+ */
+   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#20aed6), color-stop(44%,#afe3f8), color-stop(100%,#e1f5fe)); /* Chrome,Safari4+ */
+   background: -webkit-linear-gradient(top, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* Chrome10+,Safari5.1+ */
+   background: -o-linear-gradient(top, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* Opera 11.10+ */
+   background: -ms-linear-gradient(top, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* IE10+ */
+   background: linear-gradient(to bottom, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* W3C */
 }
 
 .iosSlider {
@@ -16,13 +24,8 @@
    width: 100%;
    height: 100%;
 
-   background: #20aed6; /* Old browsers */
-   background: -moz-linear-gradient(top, #20aed6 0%, #afe3f8 44%, #e1f5fe 100%); /* FF3.6+ */
-   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#20aed6), color-stop(44%,#afe3f8), color-stop(100%,#e1f5fe)); /* Chrome,Safari4+ */
-   background: -webkit-linear-gradient(top, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* Chrome10+,Safari5.1+ */
-   background: -o-linear-gradient(top, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* Opera 11.10+ */
-   background: -ms-linear-gradient(top, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* IE10+ */
-   background: linear-gradient(to bottom, #20aed6 0%,#afe3f8 44%,#e1f5fe 100%); /* W3C */
+   background: url(../img/clouds@2x.png) no-repeat top center;
+   background-size: 100%;
 }
 
 /* slider */
@@ -43,7 +46,7 @@
    text-align: center;
    text-shadow: 0 1px 1px #333;
    color: white;
-   margin: 50px 100px;
+   margin: 40px 100px 30px;
 }
 #tour .continueMessage {
     position: absolute;
