--- a/css/iosSlider.css
+++ b/css/iosSlider.css
@@ -233,9 +233,35 @@
 }
 .slide4 .stat {
    text-align: right;
-   padding-right: 70px;
+   padding-right: 60px;
    line-height: 50px;
    font-size: 1.5em;
-   margin: 10px 60px;
+   margin: 10px 70px;
    font-weight: bold;
+}
+.slide4 .stat1 {
+   background: url(../img/iconTasksHomeTour@2x.png) right center no-repeat;
+   background-size: 45px 45px;
+}
+.slide4 .stat2 {
+   background: url(../img/iconSavingsHomeTour@2x.png) right center no-repeat;
+   background-size: 45px 45px;
+}
+.slide4 .stat3 {
+   background: url(../img/iconCharitiesHomeTour@2x.png) right center no-repeat;
+   background-size: 45px 45px;
+}
+.slide4 .stat1 > span {
+   color: #01799c;
+}
+.slide4 .stat2 > span {
+   color: #779f25;
+}
+.slide4 .stat3 > span {
+   color: #6e4da6;
+}
+.slide4 h2 {
+   color: white;
+   text-shadow: 0 1px 1px #333;
+   margin-top: 90px;
 }
